--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,32 +2,43 @@
 
 /*----Body reset----*/
 body{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     font-family: 'Rubik', sans-serif;
     font-size: 10px;
     font-weight: 300;
     text-align: center;
-    color: rgb(12 51 18);
-    background-color: grey;
+    color: rgb(4 4 4);
+    background-color:#e7ea0b7a;;
+    background-image: url("/assets/img/globe.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 30rem;
+    background-position-y: top;
 }
 
 /*----quiz-app ----*/
 .quiz-app{
     margin: 0;
-    padding: 0.5rem;
-    border: 0.5rem;
+    padding: 0rem;
+    border: 0rem;
 }
 /*----Heading ----*/
 h1{
     font-weight: 500;
-    font-size: 4rem;
+    font-size: 2.5rem;
     margin-top: 0;
     margin-bottom: 0.1;
-    background-color: rgb(116, 189, 6);
+    background-color: rgb(116 189 6 / 54%);
+    border-radius: 0.5rem;
 }
 /*----Intro----*/
 h2{
     font-weight: 400;
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin-top: 0;
     margin-bottom: 0.1;
 }
@@ -42,24 +53,25 @@ img{
     height: 25rem;
     margin-top: 4rem;
     width: 100%;
-}
+}   
 
 
 /*----quiz ----*/
 #quiz{
 position: relative;
-margin-top: 4rem;
+margin-top: 1rem;
 height: 20rem;
+background: #ffffff8f;
 }
 .question{
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-bottom: 1rem;
 }
 .answers{
-    margin-bottom: 2rem;
+    
     text-align: left;
     display: inline-block;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 .answers label{
     display: block;
@@ -67,11 +79,13 @@ height: 20rem;
 }
 /*----buttons ----*/
 button{
-    padding: 2rem 4rem;
-    border-radius: 3rem;
-    background-color: rgb(19, 179, 53);
+    font-family: 'Rubik', sans-serif;
+    padding: 1.5rem;
+    border-radius: 2rem;
+    background-color: rgb(116, 189, 6);
     font-size: 1.5rem;
-    margin-bottom: 2rem;
+    margin-bottom: 0rem;
+    margin-top: 0.5rem;
 }
 button:hover{
     background-color: darkgreen;
@@ -87,5 +101,5 @@ button:hover{
 }
 .active-slide{
     opacity: 1;
-    z-index: 2;
+    z-index: 5;
 }
