--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,7 @@ button{
     font-size: 1.5rem;
     margin-bottom: 0rem;
     margin-top: 0.5rem;
+    cursor: pointer;
 }
 button:hover{
     background-color: darkgreen;
@@ -93,13 +94,22 @@ button:hover{
 
 /*----Pagination ----*/
 .slide{
-    position: relative;
+    position: absolute;
+    left: 0;
+    top: 0;
     width: 100%;
     z-index: 1;
     opacity: 0;
-    transition: 0.5s;
+    transition: opacity 0.5s;
 }
 .active-slide{
     opacity: 1;
     z-index: 5;
+}
+
+/*----Results----*/
+#results{
+    font-size: 3rem;
+    font-weight: 400;
+    text-align: center;
 }
