--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body{
     text-align: center;
     color: rgb(4 4 4);
     background-color:#e7ea0b7a;
-    background-image: url("assets/img/globe.png");
+    background-image: url("https://oluwafemiawosanya.github.io/MS2-News-Quiz/assets/img/globe.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 30rem;
