--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,7 +133,7 @@ button:hover{
 
 @media only screen and (min-width: 50.000rem){
     body{
-    height: fit-content;
+    height: 75%;
     width: 100%;
 }
 
